--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 Haista paska!
 <p>:D
+<iframe width="1280" height="720" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
